--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
   <body>
     <header>
       <nav class="navbar">
-        <img src="/images/logo.png" alt="Logo" class="logo" />
+        <img src="/images/favicon.png" alt="Logo" class="logo" />
         <ul class="nav-links">
           <li><a href="#menu">Menú</a></li>
           <li><a href="#about">Sobre Nosotros</a></li>
